--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "type": "module",
   "engines": {
-    "node": "18.x"
+    "node": "22.0.0"
   },
   "scripts": {
     "build": "tsc",
