--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "csv-parse": "^5.5.2",
     "delay": "^6.0.0",
     "dequal": "^2.0.3",
+    "dotenv": "^17.2.2",
     "dotenv-safe": "^8.2.0",
     "express": "^5.1.0",
     "global-agent": "^3.0.0",
